--- a/etc/NEWS
+++ b/etc/NEWS
@@ -19,6 +19,10 @@ alternative to xbacklight.el
 
 [[https://emacspeak.blogspot.com/2022/06/emacspeak-complete-audio-desktop-under.html][Emacspeak auditory display]] features work under Pulseaudio.
 
+** Speech-Enable ~journalctl-mode~
+
+Speech-enable package ~journalctl-mode~ to work with SystemD
+JournalCTL.
 
 ** Speech-Enable ffap: find-file-at-point
 
